# weather_prediction

./: .env.default  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml  ruff.yml
.github/: github-actions-demo.yml
.github/workflows/: github-actions-demo.yml
feature-pipeline/: pipeline.py  pyproject.toml
feature-pipeline/etl/: extract.py  settings.py
feature-pipeline/feature_pipeline/: clean_feature_store.py  feature_view.py  pipeline.py  settings.py  utils.py
feature-pipeline/feature_pipeline/etl/: clean.py  extract.py  load.py  validation.py
feature_pipeline/: clean_feature_store.py  pipeline.py  utils.py
feature_pipeline/etl/: clean.py  load.py
training-pipeline/: pyproject.toml
training-pipeline/training_pipeline/: __init__.py
training_pipeline/: data.py  utils.py
