[tool.poetry]
name = "ci-pipeline"
version = "0.1.0"
description = "ci-pipeline"
authors = ["JesseHoekman <jessehoekman@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
ruff = "^0.1.0"
mypy = "^0.910.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
