[tool.poetry]
name = "weather-prediction"
version = "0.1.0"
description = "weather-prediction"
authors = ["JesseHoekman <jessehoekman@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ruff = "^0.2.2"
mypy = "^1.8.0"
pyarrow = "^11.0.0"
wandb = "^0.14.0"
matplotlib = "^3.7.1"
hopsworks = "3.4.3"
python-dotenv = "^1.0.0"
lightgbm = "^3.3.5"
sktime = "^0.16.1"
seaborn = "^0.12.2"
fire = "^0.5.0"
Jinja2 = "3.0.1"
yarl = "^1.8.2"
pandas = ">=1.3.5"
requests = "^2.28.2"


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["E501", "D401", "D417", "D100", "G004" ,"FA100", "D104", "ANN401", "D211", "D213", "N806", "SLF001"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
