[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = "feature-pipeline"
authors = ["JesseHoekman <jessehoekman@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
hopsworks = "3.4.3"
fire = "^0.5.0"
yarl = "^1.8.2"
pandas = ">=1.3.5"
requests = "^2.28.2"
python-dotenv = ">=0.21.1"
mypy = "^1.8.0"


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disable_error_code = import-untyped

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
