[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = "feature-pipeline"
authors = ["JesseHoekman <jessehoekman@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pyarrow = "^11.0.0"
wandb = "^0.14.0"
matplotlib = "^3.7.1"
hopsworks = "3.4.3"
python-dotenv = "^1.0.0"
lightgbm = "^3.3.5"
sktime = "^0.16.1"
seaborn = "^0.12.2"
fire = "^0.5.0"
Jinja2 = "3.0.1"
mypy = "^1.8.0"


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
